[package]
name = "atlas-decision-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize_serde = ["serde", "bincode", "atlas-core/serialize_serde", "atlas-communication/serialize_serde"]
serialize_capnp = []

default = ["serialize_serde"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
atlas-common = { path = "../Atlas-Common" }
atlas-core = { path = "../Atlas-Core" }
atlas-logging-core = { path = "../Atlas-Logging-Core" }

either = "*"
log = "0.4.20"
atlas-communication = { path = "../Atlas-Communication" }

bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }

serde = { version = "1.0", optional = true }